--- a/public/views/dashboard.html
+++ b/public/views/dashboard.html
@@ -15,14 +15,18 @@
         <li class="collection-item" id="search">
           <input id="searchBar" type="text" placeholder="Search Gist" ng-model="searchGist" />
         </li>
-        <li class="collection-item" id="add" ng-click="/#/create">
+        <li class="collection-item" id="add" ng-href="/#/create">
+          <a class="waves-effect waves-light btn create" >
             Create
+          </a>
         </li>
 
-        <li ng-click="display(gist.id)" class="collection-item" ng-repeat="gist in gists | filter:searchGist">
-           {{ gist.description }}
-          <li ng-repeat="file in gist.files">{{ file.filename }}</li>
-        </li>
+        <a href="#">
+          <li ng-click="display(gist.id)" class="collection-item" ng-repeat="gist in gists | filter:searchGist">
+             {{ gist.description }}
+            <li ng-repeat="file in gist.files">{{ file.filename }}</li>
+          </li>
+        </a>
 
       </ul>
 
@@ -46,7 +50,7 @@
                 <h4 id="gistTitle">{{ displayGist.description }}</h4>
             </div>
             <div class="col s3">
-              <a class="waves-effect waves-light btn edit" ng-href="/#/edit/{{ displayGist.id }}"><i class="material-icons" ng-click="/#/edit/{{ displayGist.id }}">mode_edit</i>Edit</a>
+              <a class="waves-effect waves-light btn edit" ng-href="/#/edit/{{ displayGist.id }}">Edit</a>
             </div>
             <div class="col s12">
                 <p id="gistFileName">File Name: {{ file.filename }}</p>
