changed button colors, added color variables for sass

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -1,6 +1,9 @@
+$light-green: #4CAF50;
+$dark-green: #388E3C;
+$grey: #B6B6B6;
 // ------------- Body
 body {
-  background-color : #4CAF50;
+  background-color : $light-green;
 }
 
 #header {
@@ -33,7 +36,7 @@ body {
       margin-left: -16px;
       padding-left: 10px;
       padding-right: 10px;
-      background-color: #388E3C;
+      background-color: $dark-green;
     }
   }
 
@@ -43,7 +46,7 @@ body {
 }
 
 .btn {
-  background-color: #727272;
+  background-color: #4B8486;
 }
 
 // ------------- Landing Page
@@ -57,7 +60,7 @@ body {
   position: relative;
   width: 100%;
   // height: 400px;
-  background-color: #4CAF50;
+  background-color: $light-green;
   background: url('/images/background.jpeg') no-repeat center center scroll;
   background-size: cover;
   -o-background-size: cover;
@@ -65,7 +68,7 @@ body {
 }
 
 #dash-header {
-background-color: #388E3C;
+background-color: $dark-green;
 // -webkit-box-shadow: 0px 0px 10px 0.1px #000000;
 // -moz-box-shadow: 0px 0px 8px 2px #000000;
 //box-shadow: 0px 0px 8px 2px #000000;
@@ -113,7 +116,7 @@ input#searchBar{
 }
 
 input#search[placeholder] {
-  color:black;
+  color:#000;
 }
 
 // ------------- Collections
@@ -123,8 +126,8 @@ input#search[placeholder] {
 
 li.collection-item.ng-binding.ng-scope {
   color: #000;
-  border-top: 1px dashed #B6B6B6;
-  border-bottom: 1px dashed #B6B6B6;
+  border-top: 1px dashed $grey;
+  border-bottom: 1px dashed $grey;
 
 }
 
@@ -136,7 +139,7 @@ li.collection-item.ng-binding.ng-scope {
 
 // Left Panel
 #left-panel {
-  border: 1px dashed #B6B6B6;
+  border: 1px dashed $grey;
 }
 
 // Right Panel
@@ -150,7 +153,7 @@ li.collection-item.ng-binding.ng-scope {
 }
 
 .crudButtons {
-  background-color: #388E3C;
+  background-color: $dark-green;
   padding-top: 9px;
   padding-bottom: 9px;
 }
@@ -164,9 +167,7 @@ height:40px;
     font-size: 1.6em;
   }
   &:hover {
-    // background-color: #388E3C;
-    // background-color: #C8E6C9;
-    background-color: #4CAF50
+    background-color: #165356; // dark blue
   }
   &.create, &.edit {
     width:100%;
@@ -184,7 +185,7 @@ div.view-gist-info {
 
   #gistFileName {
     margin-top: 0px;
-    color: #388E3C;
+    color: $dark-green;
     margin-top: 0px;
   }
 
@@ -222,13 +223,13 @@ p#gistFileName {
 
 // Navigations
 .nav-wrapper {
-  background-color: #388E3C;
+  background-color: $dark-green;
 }
 
 footer.page-footer {
   margin-top: 0px;
   padding-top:0px;
-  background-color: #388E3C;
+  background-color: $dark-green;
   font-size: 0.8em;
 }
 
@@ -249,7 +250,7 @@ footer.page-footer {
 //   border-top: 5px solid transparent;
 //   border-bottom: 5px solid transparent;
 
-//   border-left: 5px solid #388E3C;
+//   border-left: 5px solid $dark-green;
 // }
 //------------------------
 
@@ -264,7 +265,7 @@ textarea.materialize-textarea {
 
   label {
     padding-left: 4%;
-    color: #388E3C;
+    color: $dark-green;
 
     &.active {
       transform: translateY(-0%);
